// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundBreak renders 0 1`] = `
Array [
  .c0 {
  background-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders function 1`] = `
Array [
  .c0 {
  background-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders invalid theme path 1`] = `
Array [
  .c0 {
  background-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders negative number 1`] = `
Array [
  .c0 {
  background-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-break: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-break: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-break: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-break: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-break: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-break: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-break: July;
  }
}

@media April {
  .c0 {
    background-break: August;
  }
}

@media January {
  .c0 {
    background-break: September;
  }
}

@media April {
  .c0 {
    background-break: November;
  }
}

@media June {
  .c0 {
    background-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-break: July;
  }
}

@media April {
  .c0 {
    background-break: August;
  }
}

@media January {
  .c0 {
    background-break: September;
  }
}

@media April {
  .c0 {
    background-break: November;
  }
}

@media June {
  .c0 {
    background-break: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-break: January;
  }
}

@media April {
  .c0 {
    background-break: December;
  }
}

@media January {
  .c0 {
    background-break: April;
  }
}

@media April {
  .c0 {
    background-break: May;
  }
}

@media June {
  .c0 {
    background-break: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-break: January;
  }
}

@media April {
  .c0 {
    background-break: December;
  }
}

@media January {
  .c0 {
    background-break: April;
  }
}

@media April {
  .c0 {
    background-break: May;
  }
}

@media June {
  .c0 {
    background-break: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders postitive number 1`] = `
Array [
  .c0 {
  background-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders string 1`] = `
Array [
  .c0 {
  background-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundBreak renders valid theme path 1`] = `
Array [
  .c0 {
  background-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-break: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
